app/assets/stylesheets/components/_navbar.scss
/* Main navbar */
.navbar-wagon {
  // box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  width: 100vw;
  background: white;
  transition: all 0.3s ease;
  height: 55px;
  padding: 0px 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  // position: relative;
  position: fixed;
  background-color: transparent;
  transition: 0.5s background-color ease;
}


.navbar-wagon-white {
  color: #616668;
  background-color: white;
  box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
  .navbar-wagon-link {
    color: #616668;
    font-weight: normal;
    // font-size: 14px;
    }
}

/* Logo */
.navbar-wagon-brand img {
  height: 55px;
  margin: -5px;
}

.navbar-wagon-brand-title {
  left: 0;
  font-size: 20px;
  font-weight: bold;
  color: #FA5659;
  position: absolute;
  left: 90px;
  top: 17px;
  cursor: pointer;
}

.navbar-wagon p {
  font-family: "Playfair Display", serif;
  font-weight: 900;
  font-style: italic;
}

/* User Avatar */
.navbar-wagon .avatar {
  height: 35px;
  width: 35px;
  border-radius: 50%;
}

/* Right section */
.navbar-wagon-right {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Basic navbar item */
.navbar-wagon-item {
  cursor: pointer;
  padding: 0 20px;
}

.navbar-wagon-item :hover {
  color: #FF6968;
}

/* Navbar link */
.navbar-wagon-link {
  // color: #616668;
  color: white;
  font-weight: bold;
  font-size: 14px;
}
.navbar-wagon-link:hover {
  color: #da552f;
  text-decoration: none;
}

/* Dropdown menu */
.navbar-wagon-dropdown-menu {
  margin-top: 15px;
  box-shadow: 1px 1px 4px #E6E6E6;
  border-color: #E6E6E6;
}
.navbar-wagon-dropdown-menu li > a {
  transition: color 0.3s ease;
  font-weight: lighter !important;
  color: #999999 !important;
  font-size: 15px !important;
  line-height: 22px !important;
  padding: 0px 20px;
}
.navbar-wagon-dropdown-menu li > a:hover {
  background: transparent !important;
  color: black !important;
}
.navbar-wagon-dropdown-menu:before {
  content: ' ';
  height: 10px;
  width: 10px;
  position: absolute;
  right: 10px;
  top: -6px;
  background-color: white;
  transform: rotate(45deg);
  border-left: 1px solid #E6E6E6;
  border-top: 1px solid #E6E6E6;
}

